--- a/src/helper/Makefile_insert
+++ b/src/helper/Makefile_insert
@@ -46,3 +46,6 @@ helper/sp-marshal.cpp: helper/sp-marshal.list helper/sp-marshal.h
 	 && mv helper/tmp.$$$$ helper/sp-marshal.cpp
 
 helper/sp-marshal.cpp helper/sp-marshal.h: Makefile
+
+helper_units_test_SOURCES = helper/units-test.cpp
+helper_units_test_LDADD = helper/libspchelp.a -lglib
