making standalone viewer for testing
(bzr r3060)

--- a/src/ecma/Makefile
+++ b/src/ecma/Makefile
@@ -11,21 +11,41 @@ CXX=g++
 CFLAGS = -O -g -Wall -DXP_UNIX 
 
 INC = -I. -I.. -I../extension/script/js \
-`pkg-config --cflags gtk+-2.0` \
-`pkg-config --cflags sigc++-1.2`
+`pkg-config --cflags sigc++-1.2` \
+`pkg-config --cflags gtkmm-2.0` \
+`pkg-config --cflags libxml-2.0`
 
-LIBS = ../libinkpost.a ../libinkpre.a \
--L../extension/script/js -ljs \
-`pkg-config --libs gtk+-2.0` \
-`pkg-config --libs sigc++-1.2`
+LIBS = \
+../libinkpre.a	\
+../dialogs/libspdialogs.a	\
+../xml/libspxml.a	\
+../svg/libspsvg.a	\
+../widgets/libspwidgets.a	\
+../display/libspdisplay.a	\
+../helper/libspchelp.a	\
+../libnrtype/libnrtype.a	\
+../libnr/libnr.a	\
+../livarot/libvarot.a	\
+../extension/libextension.a	\
+../extension/implementation/libimplementation.a	\
+../extension/internal/libinternal.a	\
+../extension/script/js/libjs.a \
+../inkjar/libinkjar.a	\
+../libinkpost.a \
+`pkg-config --libs sigc++-1.2` \
+`pkg-config --libs gtkmm-2.0` \
+`pkg-config --libs libxml-2.0` \
+-lpng -lstdc++
 
+OBJ = EcmaBinding.o SVGViewer.o
 
-OBJ = EcmaBinding.o
-
-all: ecmatest
+all: ecmatest svgview
 
 ecmatest: ecmatest.o $(OBJ)
 	$(CXX) -o ecmatest $(OBJ) ecmatest.o $(LIBS)
+
+svgview: svgview.o $(OBJ)
+	$(CXX) -o svgview $(OBJ) svgview.o $(LIBS)
 
 .cpp.o:
 	$(CXX) $(CFLAGS) $(INC) -c -o $@ $<
@@ -35,4 +55,4 @@ ecmatest: ecmatest.o $(OBJ)
 
 
 clean:
-	$(RM) ecmatest *.o
+	$(RM) ecmatest svgview *.o
