--- a/src/libnrtype/Makefile_insert
+++ b/src/libnrtype/Makefile_insert
@@ -37,6 +37,9 @@ libnrtype_libnrtype_a_CPPFLAGS =	\
 libnrtype_libnrtype_a_SOURCES =	\
 	libnrtype/font-style-to-pos.cpp	\
 	libnrtype/font-style-to-pos.h	\
+	libnrtype/font-glyph.h	\
+	libnrtype/font-instance.h	\
+	libnrtype/font-style.h	\
 	libnrtype/nr-type-pos-def.cpp	\
 	libnrtype/nr-type-pos-def.h	\
 	libnrtype/nr-type-primitives.cpp	\
