--- a/src/libnrtype/Makefile_insert
+++ b/src/libnrtype/Makefile_insert
@@ -51,6 +51,8 @@ libnrtype_libnrtype_a_SOURCES =	\
 	libnrtype/FontInstance.h \
 	libnrtype/RasterFont.cpp \
 	libnrtype/RasterFont.h \
+	libnrtype/raster-glyph.h	\
+	libnrtype/raster-position.h	\
 	libnrtype/TextWrapper.cpp \
 	libnrtype/TextWrapper.h \
 	$(libnrtype_win32_sources)	\
