Adding in -forward.h for distcheck.
(bzr r3144)

--- a/src/extension/Makefile_insert
+++ b/src/extension/Makefile_insert
@@ -19,6 +19,7 @@ extension_libextension_a_CPPFLAGS =	\
 extension_libextension_a_SOURCES =	\
 	extension/extension.cpp	\
 	extension/extension.h	\
+	extension/extension-forward.h	\
 	extension/db.cpp	\
 	extension/db.h	\
 	extension/init.cpp	\
