Adding in require-config.h for distcheck
(bzr r3147)

--- a/src/Makefile_insert
+++ b/src/Makefile_insert
@@ -81,6 +81,7 @@ libinkpre_a_SOURCES =	\
 	prefs-utils.cpp prefs-utils.h	\
 	print.cpp print.h	\
 	rect-context.cpp rect-context.h	\
+	require-config.h \
 	rubberband.cpp rubberband.h	\
 	satisfied-guide-cns.cpp satisfied-guide-cns.h	\
 	select-context.cpp select-context.h	\
