Adding in some more .cpp files.  Should be all of them now.
(bzr r3151)

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -20,9 +20,11 @@ src/dialogs/desktop-properties.cpp
 src/dialogs/dialog-events.cpp
 src/dialogs/display-settings.cpp
 src/dialogs/export.cpp
+src/dialogs/filedialog-win32.cpp
 src/dialogs/filedialog.cpp
 src/dialogs/fill-style.cpp
 src/dialogs/find.cpp
+src/dialogs/in-dt-coordsys.cpp
 src/dialogs/item-properties.cpp
 src/dialogs/object-attributes.cpp
 src/dialogs/object-properties.cpp
@@ -32,49 +34,69 @@ src/dialogs/text-edit.cpp
 src/dialogs/transformation.cpp
 src/dialogs/xml-tree.cpp
 src/dir-util.cpp
+src/display/bezier-utils-test.cpp
+src/display/bezier-utils.cpp
 src/display/canvas-arena.cpp
+src/display/canvas-bpath.cpp
+src/display/canvas-grid.cpp
+src/display/curve.cpp
+src/display/gnome-canvas-acetate.cpp
+src/display/guideline.cpp
 src/display/nr-arena-glyphs.cpp
 src/display/nr-arena-group.cpp
 src/display/nr-arena-image.cpp
 src/display/nr-arena-item.cpp
 src/display/nr-arena-shape.cpp
 src/display/nr-arena.cpp
+src/display/nr-gradient-gpl.cpp
+src/display/nr-plain-stuff-gdk.cpp
+src/display/nr-plain-stuff.cpp
+src/display/sodipodi-ctrl.cpp
+src/display/sodipodi-ctrlrect.cpp
+src/display/sp-canvas-util.cpp
+src/display/sp-canvas.cpp
+src/display/sp-ctrlline.cpp
 src/display/testnr.cpp
 src/document-undo.cpp
 src/document.cpp
 src/draw-context.cpp
 src/dropper-context.cpp
 src/dyna-draw-context.cpp
+src/ecma/EcmaBinding.cpp
+src/ecma/SVGViewer.cpp
+src/ecma/ecmatest.cpp
+src/ecma/svgview.cpp
 src/event-context.cpp
 src/extension/db.cpp
-src/extension/db.h
 src/extension/extension.cpp
-src/extension/extension.h
-src/extension/init.cpp
-src/extension/init.h
-src/extension/system.cpp
-src/extension/system.h
+src/extension/implementation/implementation.cpp
 src/extension/implementation/script.cpp
-src/extension/implementation/script.h
+src/extension/init.cpp
 src/extension/internal/eps-out.cpp
+src/extension/internal/gdkpixbuf-input.cpp
 src/extension/internal/gnome.cpp
-src/extension/internal/gnome.h
+src/extension/internal/ps-out.cpp
 src/extension/internal/ps.cpp
-src/extension/internal/ps.h
 src/extension/internal/svg.cpp
-src/extension/internal/svg.h
 src/extension/internal/win32.cpp
-src/extension/internal/win32.h
+src/extension/system.cpp
+src/extract-uri-test.cpp
+src/extract-uri.cpp
 src/file.cpp
+src/fixes.cpp
 src/geom.cpp
 src/gradient-chemistry.cpp
 src/help.cpp
 src/helper/action.cpp
 src/helper/gnome-utils.cpp
 src/helper/png-write.cpp
+src/helper/sp-marshal.cpp
+src/helper/stock-items.cpp
 src/helper/unit-menu.cpp
+src/helper/units-test.cpp
 src/helper/units.cpp
 src/helper/window.cpp
+src/inkjar/jar.cpp
 src/inkscape-stock.cpp
 src/inkscape.cpp
 src/inkview.cpp
@@ -85,6 +107,8 @@ src/libnr/nr-blit.cpp
 src/libnr/nr-compose-transform.cpp
 src/libnr/nr-compose.cpp
 src/libnr/nr-gradient.cpp
+src/libnr/nr-matrix-fns.cpp
+src/libnr/nr-matrix-test.cpp
 src/libnr/nr-matrix.cpp
 src/libnr/nr-object.cpp
 src/libnr/nr-path.cpp
@@ -92,14 +116,25 @@ src/libnr/nr-pixblock-line.cpp
 src/libnr/nr-pixblock-pattern.cpp
 src/libnr/nr-pixblock-pixel.cpp
 src/libnr/nr-pixblock.cpp
+src/libnr/nr-point-fns-test.cpp
 src/libnr/nr-point-fns.cpp
+src/libnr/nr-rect-l.cpp
 src/libnr/nr-rect.cpp
+src/libnr/nr-rotate-fns-test.cpp
+src/libnr/nr-rotate-fns.cpp
+src/libnr/nr-rotate-test.cpp
+src/libnr/nr-scale-test.cpp
 src/libnr/nr-svp-render.cpp
 src/libnr/nr-svp.cpp
+src/libnr/nr-translate-test.cpp
 src/libnr/nr-types-test.cpp
 src/libnr/nr-types.cpp
 src/libnr/nr-values.cpp
 src/libnr/testnr.cpp
+src/libnrtype/FontFactory.cpp
+src/libnrtype/FontInstance.cpp
+src/libnrtype/RasterFont.cpp
+src/libnrtype/TextWrapper.cpp
 src/libnrtype/cp1250.cpp
 src/libnrtype/cp1251.cpp
 src/libnrtype/cp1252.cpp
@@ -118,29 +153,42 @@ src/libnrtype/font-style-to-pos.cpp
 src/libnrtype/nr-type-pos-def.cpp
 src/libnrtype/nr-type-primitives.cpp
 src/livarot/AVL.cpp
+src/livarot/AlphaLigne.cpp
+src/livarot/BitLigne.cpp
 src/livarot/DblLinked.cpp
+src/livarot/Ligne.cpp
 src/livarot/MySeg.cpp
 src/livarot/Path-test.cpp
 src/livarot/Path.cpp
 src/livarot/PathConversion.cpp
+src/livarot/PathCutting.cpp
 src/livarot/PathOutline.cpp
 src/livarot/PathSimplify.cpp
 src/livarot/PathStroke.cpp
 src/livarot/Shape.cpp
 src/livarot/ShapeDraw.cpp
 src/livarot/ShapeMisc.cpp
+src/livarot/ShapeRaster.cpp
 src/livarot/ShapeSweep.cpp
 src/livarot/ShapeSweepUtils.cpp
 src/main.cpp
+src/marker-status.cpp
+src/message-context.cpp
+src/message-stack.cpp
+src/mod360-test.cpp
+src/mod360.cpp
 src/node-context.cpp
 src/nodepath.cpp
 src/object-edit.cpp
 src/object-ui.cpp
 src/path-chemistry.cpp
+src/prefix.cpp
 src/prefs-utils.cpp
 src/print.cpp
 src/rect-context.cpp
 src/rubberband.cpp
+src/satisfied-guide-cns.cpp
+src/selcue.cpp
 src/select-context.cpp
 src/select-toolbar.cpp
 src/selection-chemistry.cpp
@@ -161,7 +209,10 @@ src/sp-gradient.cpp
 src/sp-guide.cpp
 src/sp-image.cpp
 src/sp-item-group.cpp
+src/sp-item-notify-moveto.cpp
+src/sp-item-rm-unsatisfied-cns.cpp
 src/sp-item-transform.cpp
+src/sp-item-update-cns.cpp
 src/sp-item.cpp
 src/sp-line.cpp
 src/sp-marker.cpp
@@ -184,14 +235,25 @@ src/sp-spiral.cpp
 src/sp-star.cpp
 src/sp-symbol.cpp
 src/sp-text.cpp
+src/sp-typeset-kplayout.cpp
+src/sp-typeset-layout.cpp
+src/sp-typeset-utils.cpp
 src/sp-typeset.cpp
+src/sp-use-reference.cpp
 src/sp-use.cpp
 src/spiral-context.cpp
 src/splivarot.cpp
 src/star-context.cpp
+src/streams-gzip.cpp
+src/streams-handles.cpp
+src/streams-jar.cpp
+src/streams-zlib.cpp
 src/style.cpp
 src/svg-view.cpp
+src/svg/ftos.cpp
 src/svg/gnome-canvas-bpath-util.cpp
+src/svg/itos.cpp
+src/svg/round.cpp
 src/svg/svg-affine.cpp
 src/svg/svg-color.cpp
 src/svg/svg-length.cpp
@@ -222,6 +284,7 @@ src/widgets/sp-color-scales.cpp
 src/widgets/sp-color-selector.cpp
 src/widgets/sp-color-slider.cpp
 src/widgets/sp-color-wheel-selector.cpp
+src/widgets/sp-color-wheel.cpp
 src/widgets/sp-widget.cpp
 src/widgets/sp-xmlview-attr-list.cpp
 src/widgets/sp-xmlview-content.cpp
@@ -233,6 +296,7 @@ src/winmain.cpp
 src/xml/repr-action-test.cpp
 src/xml/repr-action.cpp
 src/xml/repr-css.cpp
+src/xml/repr-get-children.cpp
 src/xml/repr-io.cpp
 src/xml/repr-util.cpp
 src/xml/repr.cpp
