Add /po to mingw make tree
(bzr r3167)

--- a/Makefile.mingw
+++ b/Makefile.mingw
@@ -4,6 +4,7 @@ include ./Makefile.mingw.common
 
 
 all:	config.h
+	$(MAKE) -C po  -f Makefile.mingw
 	$(MAKE) -C src -f Makefile.mingw
 
 config.h: config.h.mingw
