--- a/Makefile.mingw
+++ b/Makefile.mingw
@@ -36,24 +36,17 @@ dist:
 	$(CP) $(GTKDOS)$(S)bin$(S)msvcr70.dll inkscape
 	$(CP) $(GTKDOS)$(S)bin$(S)zlib-1.dll inkscape
 	$(CP) $(GTKDOS)$(S)bin$(S)zlib.dll inkscape
-#	strip -g inkscape/*.dll
-#These two don't like 'strip'
 	$(CP) $(GTKDOS)$(S)bin$(S)iconv.dll inkscape
 	$(CP) $(GTKDOS)$(S)bin$(S)intl.dll inkscape
 	$(CPDIR) $(GTKDOS)$(S)etc inkscape$(S)etc
+	echo "#### Inserted by Inkscape Makefile.mingw" > inkscape$(S)etc$(S)gtk-2.0$(S)gtkrc
+	echo "gtk-font-name=\"verdana 6.5\""           >> inkscape$(S)etc$(S)gtk-2.0$(S)gtkrc
+	echo ""                                        >> inkscape$(S)etc$(S)gtk-2.0$(S)gtkrc
 	$(MKDIR) inkscape$(S)lib
 	$(CPDIR) $(GTKDOS)$(S)lib$(S)gtk-2.0 inkscape$(S)lib$(S)gtk-2.0
 	$(CPDIR) $(GTKDOS)$(S)lib$(S)glib-2.0 inkscape$(S)lib$(S)glib-2.0
 	$(CPDIR) $(GTKDOS)$(S)lib$(S)locale inkscape$(S)lib$(S)locale
 	$(CPDIR) $(GTKDOS)$(S)lib$(S)pango inkscape$(S)lib$(S)pango
-#
-# REJON: I'm commenting out the next two lines as they are copied w/share now 
-# in accordance with the dir. reorg.
-#	$(MKDIR) inkscape$(S)pixmaps
-#	$(CP) icons$(S)*.xpm inkscape$(S)pixmaps
-#	$(CP) icons$(S)*.png inkscape$(S)pixmaps
-#	$(CP) icons$(S)*.svg inkscape$(S)pixmaps
-#
 	$(MKDIR) inkscape$(S)fonts
 	$(CP) $(GTKDOS)$(S)fonts$(S)*.ttf inkscape$(S)fonts
 	$(CPDIR) share inkscape$(S)share
@@ -69,8 +62,6 @@ dist:
 	$(CPDIR) doc inkscape$(S)doc
 	$(RMDIR) inkscape$(S)doc$(S)CVS
 	$(MKDIR) inkscape$(S)data
-# REJON: this following is now included the share folder
-#	$(MKDIR) inkscape$(S)extensions
 	$(MKDIR) inkscape$(S)locale
 	$(MAKE) -C po -f Makefile.mingw dist
 	$(MKDIR) inkscape$(S)modules
