--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -28,6 +28,7 @@ src/dialogs/in-dt-coordsys.cpp
 src/dialogs/item-properties.cpp
 src/dialogs/object-attributes.cpp
 src/dialogs/object-properties.cpp
+src/dialogs/rdf.cpp
 src/dialogs/sp-attribute-widget.cpp
 src/dialogs/stroke-style.cpp
 src/dialogs/text-edit.cpp
