modified Makefile.am because of new sl.svg files
(bzr r3284)

--- a/share/tutorials/Makefile.am
+++ b/share/tutorials/Makefile.am
@@ -2,13 +2,18 @@
 tutorialdir = $(datadir)/inkscape/tutorials
 
 tutorial_DATA = \
+    elementsofdesign.svg \
+    elementsofdesign.sl.svg \
+    tipsandtricks.svg \
+    tipsandtricks.sl.svg \
+    tutorial-advanced.svg \
+    tutorial-advanced.fr.svg \
+    tutorial-advanced.sl.svg \
     tutorial-basic.svg \
     tutorial-basic.fr.svg \
     tutorial-basic.ru.svg \
-    tutorial-advanced.svg \
-    tutorial-advanced.fr.svg \
-    elementsofdesign.svg \
-    tipsandtricks.svg
+    tutorial-basic.sl.svg
+
 
 
 EXTRA_DIST = $(tutorial_DATA)
