--- a/src/check-header-compile.in
+++ b/src/check-header-compile.in
@@ -14,14 +14,24 @@ INKSCAPE_CFLAGS="@INKSCAPE_CFLAGS@"
 OBJEXT="@OBJEXT@"
 config_h_dir=..
 
-for i in `find "$srcdir" -name bonobo -prune \
-	-o -name ecma -prune	\
-	-o -path '*/extension/script/js' -prune	\
-	-o -name '*.h' \
-	   \! -name gnome.h \! -name win32.h \! -name nr-type-gnome.h \! -name nr-type-w32.h \! -name Livarot.h \! -name radial.h \
-	   -printf '%P\n'`
-do
-	(echo "#include <$i>"; echo "int header_tst_dummy;") > header-tst.cpp
+check_compile () {
+	(echo "#include <$1>"; echo "int header_tst_dummy;") > header-tst.cpp
 	$CXX -c -I. -I"$srcdir" -I$config_h_dir $INKSCAPE_CFLAGS header-tst.cpp
-done
+}
+
+if [ $# = 0 ]; then
+	for i in `find "$srcdir" -name bonobo -prune \
+		-o -name ecma -prune	\
+		-o -path '*/extension/script/js' -prune	\
+		-o -name '*.h' \
+		   \! -name gnome.h \! -name win32.h \! -name nr-type-gnome.h \! -name nr-type-w32.h \! -name Livarot.h \! -name radial.h \
+		   -printf '%P\n'`
+	do
+		check_compile "$i"
+	done
+else
+	for i in "$@"; do
+		check_compile "$i"
+	done
+fi
 rm header-tst.cpp header-tst.$OBJEXT
