--- a/share/screens/Makefile.am
+++ b/share/screens/Makefile.am
@@ -3,7 +3,8 @@ screensdir = $(datadir)/inkscape/screens
 
 screens_DATA = \
 	about.svg \
-	keys.svg
+	keys.svg \
+	keys.sl.svg
 
 
 EXTRA_DIST = $(screens_DATA)
