Renamed desktop-snap.* to snap.* since it has nothing to do with the desktop any more.
(bzr r3323)

--- a/src/Makefile_insert
+++ b/src/Makefile_insert
@@ -44,7 +44,7 @@ libinkpre_a_SOURCES =	\
 	desktop.cpp desktop.h	\
 	desktop-events.cpp desktop-events.h	\
 	desktop-handles.cpp desktop-handles.h	\
-	desktop-snap.cpp desktop-snap.h	\
+	snap.cpp snap.h	\
 	desktop-units.h	\
 	dir-util.cpp dir-util.h	\
 	document.cpp document.h document-private.h	\
