--- a/src/Makefile_insert
+++ b/src/Makefile_insert
@@ -40,6 +40,7 @@ libinkpre_a_SOURCES =	\
 	attributes.cpp attributes.h	\
 	brokenimage.xpm	\
 	color.cpp color.h	\
+	color-rgba.h	\
 	desktop-affine.cpp desktop-affine.h	\
 	desktop.cpp desktop.h	\
 	desktop-events.cpp desktop-events.h	\
