Changes to get distcheck working again.  For some reason this worked in previous releases, but doesn't work now.  Anyway, I'm convinced that this is the right way to include libtool -- all better now.
(bzr r3382)

--- a/configure.in
+++ b/configure.in
@@ -22,7 +22,7 @@ ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"
 
 AC_PROG_RANLIB
 
-AC_PROG_LIBTOOL
+AM_PROG_LIBTOOL
 
 dnl Verify our GCC version
 if test "x$GXX" = "xyes"; then
