--- a/configure.in
+++ b/configure.in
@@ -246,7 +246,7 @@ dnl Hongli Lai <h.lai@chello.nl>
 AC_ARG_ENABLE(binreloc,
        [  --enable-binreloc       compile with binary relocation support
                           (default=enable when available)],
-       enable_binreloc=$enableval,enable_binreloc=auto)
+       enable_binreloc=$enableval,enable_binreloc=no)
 BINRELOC_CFLAGS=
 
 AC_MSG_CHECKING(whether binary relocation support should be enabled)
