Adding in isnan.h for distcheck.
(bzr r3415)

--- a/src/Makefile_insert
+++ b/src/Makefile_insert
@@ -63,6 +63,7 @@ libinkpre_a_SOURCES =	\
 	inkscape.cpp inkscape.h inkscape-private.h	\
 	inkscape-stock.cpp inkscape-stock.h\
 	interface.cpp interface.h	\
+	isnan.h \
 	knot.cpp knot.h	\
 	knotholder.cpp knotholder.h	\
 	macros.h	\
