Fixes bug 978250 with automake newer than 1.7 and still-buggy intltool
(bzr r3417)

--- a/Makefile.am
+++ b/Makefile.am
@@ -25,6 +25,7 @@ EXTRA_DIST = \
 	intltool-extract.in	\
 	intltool-merge.in	\
 	intltool-update.in	\
+	mkinstalldirs		\
 	$(Graphics_in_files)	\
 	inkscape.spec.in	\
 	inkscape.spec		\
