--- a/src/Makefile_insert
+++ b/src/Makefile_insert
@@ -79,7 +79,7 @@ libinkpre_a_SOURCES =	\
 	object-ui.cpp object-ui.h	\
 	path-chemistry.cpp path-chemistry.h	\
 	preferences-skeleton.h	\
-	prefix.cpp prefix.h	\
+	path-prefix.h prefix.cpp prefix.h	\
 	prefs-utils.cpp prefs-utils.h	\
 	print.cpp print.h	\
 	rect-context.cpp rect-context.h	\
