Okay, moving everything into $(prefix)/share/extensions  This should work with all of the current path-prefix.h stuff.  And everything should be happy again :)
(bzr r3476)

--- a/share/extensions/Makefile.am
+++ b/share/extensions/Makefile.am
@@ -1,9 +1,9 @@
 
-extensiondir = $(libdir)/inkscape/extensions
+extensiondir = $(datadir)/inkscape/extensions
 
 otherstuffdir = $(datadir)/inkscape/extensions
 
-moduledir = $(datadir)/inkscape/modules
+moduledir = $(datadir)/inkscape/extensions
 
 extensions = \
 	roundhole \
