--- a/configure.in
+++ b/configure.in
@@ -329,6 +329,13 @@ AC_STRUCT_TM
 AC_TYPE_MODE_T
 AC_TYPE_SIGNAL
 
+dnl Work around broken gcc 3.3 (seen on OSX) where "ENABLE_NLS" isn't
+dnl set correctly because the gettext function isn't noticed.
+if test "$ac_cv_header_libintl_h" = "yes" &&
+   test "$ac_cv_func_bind_textdomain_codeset" = "yes"  &&
+   test "$gt_cv_func_have_gettext" != "yes"; then
+    AC_DEFINE(ENABLE_NLS)
+fi
 
 dnl ******************************
 dnl   Compilation warnings
