--- a/src/dialogs/Makefile_insert
+++ b/src/dialogs/Makefile_insert
@@ -14,6 +14,8 @@ dialogs/clean:
 	rm -f dialogs/libspdialogs.a $(dialogs_libspdialogs_a_OBJECTS)
 
 dialogs_libspdialogs_a_SOURCES = \
+	dialogs/docker.cpp	\
+	dialogs/dockable.cpp	\
 	dialogs/align.cpp	\
 	dialogs/align.h	\
 	dialogs/desktop-properties.cpp	\
