experimental traits work
(bzr r3513)

--- a/configure.in
+++ b/configure.in
@@ -485,6 +485,9 @@ src/svg/makefile
 src/utest/makefile
 src/widgets/makefile
 src/xml/makefile
+src/traits/makefile
+src/algorithms/makefile
+src/util/makefile
 doc/Makefile
 po/Makefile.in
 share/Makefile
